test/tests/compiler/4_logical_and_relational_operators/valid/or_false.plx
pub fn main(none) i32 {
    return 0 or 0
}
