test/tests/compiler/4_logical_and_relational_operators/invalid_parse/plx1_or_vertical_bar.plx
pub fn main(none) i32 {
    return 0 || 0
}
